test/statements/manage/ContextManagerBoundNoVarDeclType.good
ContextManagerBoundNoVarDeclType.chpl:23: error: Manage statement aliases without variable declaration type are not supported
